# md_sync_url

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml
scraper/: cli.py  converter.py  crawler.py  writer.py
tests/: test_scraper.py
