[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "md-sync-url"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "click>=8.1",
    "lxml>=5.0",
]

[project.scripts]
md-sync = "scraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]
